<resources>
    <string name="app_name">Proyecto1</string>
    <string name="folclore">Folclore Mexicano</string>
    <string name="imagen">folclore</string>
    <string name="Menu">MENU PRINCIPAL</string>
    <string name="btn1">¿Qué es el folclore?</string>
    <string name="btn2">Danza regional</string>
    <string name="btn3">Las Chilenas</string>
    <string name="btn4">Los Jarabes</string>
    <string name="btn5">Las Jaranas</string>
    <string name="btn6">Las Polkas</string>
    <string name="btn7">Las Redobas</string>
    <string name="btn8">El chotis</string>
    <string name="btn9">Los sones</string>
    <string name="btn10">El vals</string>
    <string name="tituloQue">¿Qué es?</string>
    <string name="salir">volver</string>
    <string name="txtque">Son todas aquellas  representaciones de la cultura de un pueblo (artesanía, bailes, gastronomía, costumbres, tradiciones, música. etc.)</string>
    <string name="txtdan">son los bailes típicos y tradicionales de una cultura. La danza folklórica suele realizarse por tradición (no es un arte innovador) y puede ser bailada por cualquier hombre y mujer (no es exclusividad de los bailarines profesionales, aunque pueden existen grupos profesionales de danza folklórica).</string>
    <string name="txtchi">Entre las “chilenas” más conocidas en la Costa Chica está “La Sanmarqueña”, del sacerdote Emilio Vázquez Jiménez. Esta “chilena” fue compuesta en 1929, en el poblado de San Marcos, Costa Chica de Guerrero, y desde entonces siguió creciendo en el ánimo y preferencia de bohemios y trovadores que han llevado en sus voces y corazones su compás y su cadencia más allá de las fronteras mexicanas.</string>
    <string name="titulochi">Las Chilenas</string>
    <string name="chil">Las chilenas</string>
    <string name="dance">¿Qué es?</string>
    <string name="txtjar">“el jarabe”, como género regional,  tiene sus orígenes en formas tradicionales de danza española como la seguidilla y el fandango, incorporando el elemento andaluz del zapateado. De estas danzas zapateadas se derivaron el «huapango mestizo» y el «baile de tarima», que son lo que se conoce como jarabe en Nayarit, Durango, Colima, Michoacán y Jalisco, El jarabe está compuesto de una serie de piezas o tonadas en diferentes tiempos, desde ritmos lentos hasta rápidos, por lo general en tiempo ternario. Las partes más intensas muestran un gran parecido con la jota aragonesa. Hay diversos jarabes tradicionales  conocidos en la república mexicana: El jarabe ranchero, el jarabe nayarita, el jarabe pateño (que incluso fue grabado para la película de Disney “los tres caballeros”) y el jarabe tapatío que es quizá el más sonado.</string>
    <string name="jarab">Los Jarabes</string>
    <string name="jarana">Las Jaranas</string>
    <string name="txtjrn">La jarana yucateca es un baile y una forma musical originarios de la Península de Yucatán, México. “Jarana” según el diccionario quiere decir jolgorio, bullicio, diversión ruidosa de la gente del pueblo. En la época de la Colonia durante los siglos XVII y XVIII, en la Península de Yucatán los españoles y los criollos solían decir despectivamente cuando empezaban las fiestas populares: “ya empezó la jarana”. El pueblo indígena entendió esto como si se refirieran a la música que se tocaba durante las festividades y atribuyó el nombre como genérico a los sones que se interpretaban. Fue así que el baile regional de Yucatán adoptó el nombre de Jarana.</string>
    <string name="polka">Las Polkas</string>
    <string name="txtpol">La polca (también se escribe polka) es una danza popular que surgió en el territorio de Bohemia, actual República Checa, cerca de 1830 y se popularizó en su capital, Praga, desde 1835. Su nombre se deriva de la palabra checa “pulka”, que significa “medio”, haciendo referencia al paso medio característico del baile, Eventualmente, durante la Revolución, la gente tomó esta danza y creó otros ritmos inspirados en ella, dado paso a los corridos y otros que conforman el género “norteño”; que en esa época funcionaban para contar historias ocurridas durante el combate o como consecuencia de éste.</string>
    <string name="redoba">La Redoba</string>
    <string name="txtred">Se trata de una danza muy popular y complicada que llega a nuestro país y cobra carta de naturalización, por diversas razones, en el norte. Lugares como Nuevo León, Tamaulipas, Durango y demás, adoptan la redova y la convierten en propia a tal grado, que en la actualidad hay concursos de baile de redova norteña en prácticamente todos los pueblos del norte de México.</string>
    <string name="txtson">Este género se halla ampliamente difundido en el territorio nacional en una importante variedad de estilos regionales que constituyen una expresión de diferentes zonas geográficas y culturales del país. No obstante esta diversidad, es posible establecer ciertos rasgos comunes tanto en sus orígenes como en sus características musicales, líricas y dancísticas que justifican su denominación como género y lo distinguen de otras expresiones de música tradicional mexicana como las músicas indígenas, la canción, el corrido o la música norteña. </string>
    <string name="son">Los Sones</string>
    <string name="txtchot"> es otro género bailable definitivamente icónico del norte del país, y es originario de Alemania. El nombre original en alemán es Schottisch que curiosamente significa escocés. Pero la Escocesa es otra danza que es totalmente al Chotis. El caso es que llega a nuestro país y se arraiga de manera similar a la Redova. Tan popular se vuelve que la gente del norte podría jurar que tiene su origen en esas regiones a las que identifica musicalmente. Así, por ejemplo, uno de los chotises (escrito así por derivación) más populares, se llama Monterey. </string>
    <string name="choti">El chotis</string>
    <string name="txtvals">Se denomina vals a una música y una danza surgidas en Alemania y Austria. El baile del vals se caracteriza por los giros que realizan las parejas mientras se trasladan: el término, de hecho, deriva del concepto alemán walzen, que se traduce como “dar vueltas”</string>
    <string name="vals">El Vals</string>
</resources>
